# buget_manager

./: .gitignore  .replit  README.md  env.example  env.template  pyproject.toml  pytest.ini  replit.md  requirements.txt  run_tests.py
.local/state/replit/agent/filesystem/: filesystem_state.json
ai_agent/: __init__.py  function_calling.py  llm_integration.py
api/: __init__.py  urls.py  views.py
attached_assets/: Pasted--The-Merchant-Financial-Agent-A-Context-Aware-AI-Proposal-Leveraging-Model-Context-Protocol-and-Fun-1759489248159_1759489248161.txt
django_project/: settings.py  urls.py
ecomapp/: admin.py  models.py  urls.py  views.py
ecomapp/migrations/: 0001_initial.py  0002_auditlog_merchantprofile_alter_category_options_and_more.py
ecomapp/template/: home.html
ecomapp/templates/: add_event.html  add_transaction.html  ai_agent.html  base.html  currency_converter.html  dashboard.html  events.html  home.html  login.html  merchant_profile.html  register.html  reports.html  reports_advanced.html  transactions.html
mcp_servers/: __init__.py  base_mcp_server.py  mcp_orchestrator.py
mcp_servers/currency_service/: __init__.py  currency_service.py
mcp_servers/financial_db_adapter/: __init__.py  financial_db_adapter.py
mcp_servers/google_calendar_server/: __init__.py  calendar_server.py
reporting/: __init__.py  engine.py  urls.py  views.py
security/: __init__.py  audit.py  encryption.py  middleware.py
tests/: __init__.py  conftest.py  test_function_calling.py  test_integration.py  test_mcp_chaining.py
